// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._3mc5pj11,html._3mc5pj11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="ftts590 _19iwf1810 _19iwf1813">
+        <div class="_1dzpovz0 _3mc5pj8s _3mc5pj7o _3mc5pjb0 _3mc5pj9w _3mc5pj5g _3mc5pj6c _3mc5pjic _3mc5pj4k _3mc5pj4d _19iwf1810 _19iwf1813 _3mc5pj34 _3mc5pj37">
+          <span class="_1dzpovz0 _3mc5pj50 _19iwf180 _19iwf181 _19iwf181t _19iwf18a _1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1dzpovz0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1dzpovz1 {
  display: block;
}
._1dzpovz2 {
  line-height: 1;
}
._1dzpovz3 {
  list-style: none;
}
._1dzpovz4 {
  quotes: none;
}
._1dzpovz4:after,
._1dzpovz4:before {
  content: "";
}
._1dzpovz5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1dzpovz6 {
  -webkit-appearance: none;
  appearance: none;
}
._1dzpovz7 {
  background-color: transparent;
}
._1dzpovz8 {
  outline: var(--_11p3wr310) solid transparent;
  transition: outline-color 0.125s ease;
}
._1dzpovz8:focus-visible {
  outline-color: var(--_11p3wr3m);
}
._1dzpovza {
  color: inherit;
}
._1dzpovzb:disabled {
  opacity: 1;
}
._1dzpovzb::-ms-expand {
  display: none;
}
._1dzpovzd[type="number"] {
  -moz-appearance: textfield;
}
._1dzpovzd[type="number"]::-webkit-inner-spin-button,
._1dzpovzd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1dzpovzd::-ms-clear {
  display: none;
}
._1dzpovzd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1dzpovzg {
  color: inherit;
  text-decoration: none;
}
._3mc5pj0 {
  overflow: hidden;
}
._3mc5pj1 {
  overflow: scroll;
}
._3mc5pj2 {
  overflow: visible;
}
._3mc5pj3 {
  overflow: auto;
}
._3mc5pj4 {
  -webkit-user-select: none;
  user-select: none;
}
._3mc5pj5 {
  outline: none;
}
._3mc5pj6 {
  outline: var(--_11p3wr310) solid transparent;
  transition: outline-color 0.125s ease;
}
._3mc5pj6:focus-visible {
  outline-color: var(--_11p3wr3m);
}
._3mc5pj7 {
  opacity: 0;
}
._3mc5pj8 {
  z-index: 0;
}
._3mc5pj9 {
  z-index: 1;
}
._3mc5pja {
  z-index: 2;
}
._3mc5pjb {
  z-index: 90;
}
._3mc5pjc {
  z-index: 100;
}
._3mc5pjd {
  z-index: 200;
}
._3mc5pje {
  z-index: 290;
}
._3mc5pjf {
  z-index: 300;
}
._3mc5pjg {
  z-index: 400;
}
._3mc5pjh {
  cursor: default;
}
._3mc5pji {
  cursor: pointer;
}
._3mc5pjj {
  pointer-events: none;
}
._3mc5pjk {
  top: 0;
}
._3mc5pjl {
  bottom: 0;
}
._3mc5pjm {
  left: 0;
}
._3mc5pjn {
  right: 0;
}
._3mc5pjo {
  height: 100%;
}
._3mc5pjp {
  height: var(--_11p3wr39);
}
._3mc5pjq {
  width: 100%;
}
._3mc5pjr {
  width: var(--_11p3wr39);
}
._3mc5pjs {
  min-width: 0;
}
._3mc5pjt {
  max-width: var(--_11p3wr311);
}
._3mc5pju {
  max-width: var(--_11p3wr312);
}
._3mc5pjv {
  max-width: var(--_11p3wr313);
}
._3mc5pjw {
  max-width: var(--_11p3wr314);
}
._3mc5pjx {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._3mc5pjy {
  transition: var(--_11p3wr35i);
}
._3mc5pjz {
  transition: var(--_11p3wr35j);
}
._3mc5pj10:active {
  transform: var(--_11p3wr35k);
}
html._3mc5pj11 ._3mc5pj13,
html:not(._3mc5pj11) ._3mc5pj12 {
  background: var(--_11p3wr31t);
}
html._3mc5pj11 ._3mc5pj15,
html:not(._3mc5pj11) ._3mc5pj14 {
  background: var(--_11p3wr31u);
}
html._3mc5pj11 ._3mc5pj17,
html:not(._3mc5pj11) ._3mc5pj16 {
  background: var(--_11p3wr31v);
}
html._3mc5pj11 ._3mc5pj19,
html:not(._3mc5pj11) ._3mc5pj18 {
  background: var(--_11p3wr31w);
}
html._3mc5pj11 ._3mc5pj1b,
html:not(._3mc5pj11) ._3mc5pj1a {
  background: var(--_11p3wr31x);
}
html._3mc5pj11 ._3mc5pj1d,
html:not(._3mc5pj11) ._3mc5pj1c {
  background: var(--_11p3wr31y);
}
html._3mc5pj11 ._3mc5pj1f,
html:not(._3mc5pj11) ._3mc5pj1e {
  background: var(--_11p3wr31z);
}
html._3mc5pj11 ._3mc5pj1h,
html:not(._3mc5pj11) ._3mc5pj1g {
  background: var(--_11p3wr320);
}
html._3mc5pj11 ._3mc5pj1j,
html:not(._3mc5pj11) ._3mc5pj1i {
  background: var(--_11p3wr321);
}
html._3mc5pj11 ._3mc5pj1l,
html:not(._3mc5pj11) ._3mc5pj1k {
  background: var(--_11p3wr322);
}
html._3mc5pj11 ._3mc5pj1n,
html:not(._3mc5pj11) ._3mc5pj1m {
  background: var(--_11p3wr323);
}
html._3mc5pj11 ._3mc5pj1p,
html:not(._3mc5pj11) ._3mc5pj1o {
  background: var(--_11p3wr324);
}
html._3mc5pj11 ._3mc5pj1r,
html:not(._3mc5pj11) ._3mc5pj1q {
  background: var(--_11p3wr325);
}
html._3mc5pj11 ._3mc5pj1t,
html:not(._3mc5pj11) ._3mc5pj1s {
  background: var(--_11p3wr326);
}
html._3mc5pj11 ._3mc5pj1v,
html:not(._3mc5pj11) ._3mc5pj1u {
  background: var(--_11p3wr327);
}
html._3mc5pj11 ._3mc5pj1x,
html:not(._3mc5pj11) ._3mc5pj1w {
  background: var(--_11p3wr328);
}
html._3mc5pj11 ._3mc5pj1z,
html:not(._3mc5pj11) ._3mc5pj1y {
  background: var(--_11p3wr329);
}
html._3mc5pj11 ._3mc5pj21,
html:not(._3mc5pj11) ._3mc5pj20 {
  background: var(--_11p3wr32a);
}
html._3mc5pj11 ._3mc5pj23,
html:not(._3mc5pj11) ._3mc5pj22 {
  background: var(--_11p3wr32b);
}
html._3mc5pj11 ._3mc5pj25,
html:not(._3mc5pj11) ._3mc5pj24 {
  background: var(--_11p3wr32c);
}
html._3mc5pj11 ._3mc5pj27,
html:not(._3mc5pj11) ._3mc5pj26 {
  background: var(--_11p3wr32d);
}
html._3mc5pj11 ._3mc5pj29,
html:not(._3mc5pj11) ._3mc5pj28 {
  background: var(--_11p3wr32e);
}
html._3mc5pj11 ._3mc5pj2b,
html:not(._3mc5pj11) ._3mc5pj2a {
  background: var(--_11p3wr32f);
}
html._3mc5pj11 ._3mc5pj2d,
html:not(._3mc5pj11) ._3mc5pj2c {
  background: var(--_11p3wr32g);
}
html._3mc5pj11 ._3mc5pj2f,
html:not(._3mc5pj11) ._3mc5pj2e {
  background: var(--_11p3wr32h);
}
html._3mc5pj11 ._3mc5pj2h,
html:not(._3mc5pj11) ._3mc5pj2g {
  background: var(--_11p3wr32i);
}
html._3mc5pj11 ._3mc5pj2j,
html:not(._3mc5pj11) ._3mc5pj2i {
  background: var(--_11p3wr32j);
}
html._3mc5pj11 ._3mc5pj2l,
html:not(._3mc5pj11) ._3mc5pj2k {
  background: var(--_11p3wr32k);
}
html._3mc5pj11 ._3mc5pj2n,
html:not(._3mc5pj11) ._3mc5pj2m {
  background: var(--_11p3wr32l);
}
html._3mc5pj11 ._3mc5pj2p,
html:not(._3mc5pj11) ._3mc5pj2o {
  background: var(--_11p3wr32m);
}
html._3mc5pj11 ._3mc5pj2r,
html:not(._3mc5pj11) ._3mc5pj2q {
  background: var(--_11p3wr32n);
}
html._3mc5pj11 ._3mc5pj2t,
html:not(._3mc5pj11) ._3mc5pj2s {
  background: var(--_11p3wr32o);
}
html._3mc5pj11 ._3mc5pj2v,
html:not(._3mc5pj11) ._3mc5pj2u {
  background: var(--_11p3wr32p);
}
html._3mc5pj11 ._3mc5pj2x,
html:not(._3mc5pj11) ._3mc5pj2w {
  background: var(--_11p3wr32q);
}
html._3mc5pj11 ._3mc5pj2z,
html:not(._3mc5pj11) ._3mc5pj2y {
  background: var(--_11p3wr32r);
}
html._3mc5pj11 ._3mc5pj31,
html:not(._3mc5pj11) ._3mc5pj30 {
  background: var(--_11p3wr32s);
}
html._3mc5pj11 ._3mc5pj33,
html:not(._3mc5pj11) ._3mc5pj32 {
  background: var(--_11p3wr32t);
}
html._3mc5pj11 ._3mc5pj35,
html:not(._3mc5pj11) ._3mc5pj34 {
  background: var(--_11p3wr32u);
}
html._3mc5pj11 ._3mc5pj37,
html:not(._3mc5pj11) ._3mc5pj36 {
  background: var(--_11p3wr32v);
}
html._3mc5pj11 ._3mc5pj39,
html:not(._3mc5pj11) ._3mc5pj38 {
  box-shadow: var(--_11p3wr35l);
}
html._3mc5pj11 ._3mc5pj3b,
html:not(._3mc5pj11) ._3mc5pj3a {
  box-shadow: var(--_11p3wr35m);
}
html._3mc5pj11 ._3mc5pj3d,
html:not(._3mc5pj11) ._3mc5pj3c {
  box-shadow: var(--_11p3wr35n);
}
html._3mc5pj11 ._3mc5pj3f,
html:not(._3mc5pj11) ._3mc5pj3e {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3f);
}
html._3mc5pj11 ._3mc5pj3h,
html:not(._3mc5pj11) ._3mc5pj3g {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3g);
}
html._3mc5pj11 ._3mc5pj3j,
html:not(._3mc5pj11) ._3mc5pj3i {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3f);
}
html._3mc5pj11 ._3mc5pj3l,
html:not(._3mc5pj11) ._3mc5pj3k {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3g);
}
html._3mc5pj11 ._3mc5pj3n,
html:not(._3mc5pj11) ._3mc5pj3m {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3h);
}
html._3mc5pj11 ._3mc5pj3p,
html:not(._3mc5pj11) ._3mc5pj3o {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3i);
}
html._3mc5pj11 ._3mc5pj3r,
html:not(._3mc5pj11) ._3mc5pj3q {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3j);
}
html._3mc5pj11 ._3mc5pj3t,
html:not(._3mc5pj11) ._3mc5pj3s {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3j);
}
html._3mc5pj11 ._3mc5pj3v,
html:not(._3mc5pj11) ._3mc5pj3u {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3k);
}
html._3mc5pj11 ._3mc5pj3x,
html:not(._3mc5pj11) ._3mc5pj3w {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3k);
}
html._3mc5pj11 ._3mc5pj3z,
html:not(._3mc5pj11) ._3mc5pj3y {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3l);
}
html._3mc5pj11 ._3mc5pj41,
html:not(._3mc5pj11) ._3mc5pj40 {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3n);
}
html._3mc5pj11 ._3mc5pj43,
html:not(._3mc5pj11) ._3mc5pj42 {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3n);
}
html._3mc5pj11 ._3mc5pj45,
html:not(._3mc5pj11) ._3mc5pj44 {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3o);
}
html._3mc5pj11 ._3mc5pj47,
html:not(._3mc5pj11) ._3mc5pj46 {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3o);
}
html._3mc5pj11 ._3mc5pj49,
html:not(._3mc5pj11) ._3mc5pj48 {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3p);
}
html._3mc5pj11 ._3mc5pj4b,
html:not(._3mc5pj11) ._3mc5pj4a {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3q);
}
html._3mc5pj11 ._3mc5pj4d,
html:not(._3mc5pj11) ._3mc5pj4c {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3r);
}
html._3mc5pj11 ._3mc5pj4f,
html:not(._3mc5pj11) ._3mc5pj4e {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3r);
}
html._3mc5pj11 ._3mc5pj4h,
html:not(._3mc5pj11) ._3mc5pj4g {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3s);
}
html._3mc5pj11 ._3mc5pj4j,
html:not(._3mc5pj11) ._3mc5pj4i {
  box-shadow: inset 0 0 0 var(--_11p3wr3z) var(--_11p3wr3s);
}
html._3mc5pj11 ._3mc5pj4l,
html:not(._3mc5pj11) ._3mc5pj4k {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3t);
}
html._3mc5pj11 ._3mc5pj4n,
html:not(._3mc5pj11) ._3mc5pj4m {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3u);
}
html._3mc5pj11 ._3mc5pj4p,
html:not(._3mc5pj11) ._3mc5pj4o {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3v);
}
html._3mc5pj11 ._3mc5pj4r,
html:not(._3mc5pj11) ._3mc5pj4q {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3w);
}
html._3mc5pj11 ._3mc5pj4t,
html:not(._3mc5pj11) ._3mc5pj4s {
  box-shadow: inset 0 0 0 var(--_11p3wr3y) var(--_11p3wr3x);
}
html._3mc5pj11 ._3mc5pj4v,
html:not(._3mc5pj11) ._3mc5pj4u {
  box-shadow: 0 0 0 var(--_11p3wr310) var(--_11p3wr3m);
}
._3mc5pj4w {
  display: none;
}
._3mc5pj50 {
  display: block;
}
._3mc5pj54 {
  display: inline;
}
._3mc5pj58 {
  display: inline-block;
}
._3mc5pj5c {
  display: flex;
}
._3mc5pj5g {
  position: relative;
}
._3mc5pj5k {
  position: absolute;
}
._3mc5pj5o {
  position: fixed;
}
._3mc5pj5s {
  position: sticky;
}
._3mc5pj5w {
  border-radius: 0;
}
._3mc5pj60 {
  border-radius: 9999px;
}
._3mc5pj64 {
  border-radius: var(--_11p3wr3b);
}
._3mc5pj68 {
  border-radius: var(--_11p3wr3c);
}
._3mc5pj6c {
  border-radius: var(--_11p3wr3d);
}
._3mc5pj6g {
  border-radius: var(--_11p3wr3e);
}
._3mc5pj6k {
  gap: var(--_11p3wr30);
}
._3mc5pj6o {
  gap: var(--_11p3wr31);
}
._3mc5pj6s {
  gap: var(--_11p3wr32);
}
._3mc5pj6w {
  gap: var(--_11p3wr33);
}
._3mc5pj70 {
  gap: var(--_11p3wr34);
}
._3mc5pj74 {
  gap: var(--_11p3wr35);
}
._3mc5pj78 {
  gap: var(--_11p3wr36);
}
._3mc5pj7c {
  gap: var(--_11p3wr37);
}
._3mc5pj7g {
  gap: var(--_11p3wr38);
}
._3mc5pj7k {
  gap: 0;
}
._3mc5pj7o {
  padding-top: var(--_11p3wr30);
}
._3mc5pj7s {
  padding-top: var(--_11p3wr31);
}
._3mc5pj7w {
  padding-top: var(--_11p3wr32);
}
._3mc5pj80 {
  padding-top: var(--_11p3wr33);
}
._3mc5pj84 {
  padding-top: var(--_11p3wr34);
}
._3mc5pj88 {
  padding-top: var(--_11p3wr35);
}
._3mc5pj8c {
  padding-top: var(--_11p3wr36);
}
._3mc5pj8g {
  padding-top: var(--_11p3wr37);
}
._3mc5pj8k {
  padding-top: var(--_11p3wr38);
}
._3mc5pj8o {
  padding-top: 0;
}
._3mc5pj8s {
  padding-bottom: var(--_11p3wr30);
}
._3mc5pj8w {
  padding-bottom: var(--_11p3wr31);
}
._3mc5pj90 {
  padding-bottom: var(--_11p3wr32);
}
._3mc5pj94 {
  padding-bottom: var(--_11p3wr33);
}
._3mc5pj98 {
  padding-bottom: var(--_11p3wr34);
}
._3mc5pj9c {
  padding-bottom: var(--_11p3wr35);
}
._3mc5pj9g {
  padding-bottom: var(--_11p3wr36);
}
._3mc5pj9k {
  padding-bottom: var(--_11p3wr37);
}
._3mc5pj9o {
  padding-bottom: var(--_11p3wr38);
}
._3mc5pj9s {
  padding-bottom: 0;
}
._3mc5pj9w {
  padding-right: var(--_11p3wr30);
}
._3mc5pja0 {
  padding-right: var(--_11p3wr31);
}
._3mc5pja4 {
  padding-right: var(--_11p3wr32);
}
._3mc5pja8 {
  padding-right: var(--_11p3wr33);
}
._3mc5pjac {
  padding-right: var(--_11p3wr34);
}
._3mc5pjag {
  padding-right: var(--_11p3wr35);
}
._3mc5pjak {
  padding-right: var(--_11p3wr36);
}
._3mc5pjao {
  padding-right: var(--_11p3wr37);
}
._3mc5pjas {
  padding-right: var(--_11p3wr38);
}
._3mc5pjaw {
  padding-right: 0;
}
._3mc5pjb0 {
  padding-left: var(--_11p3wr30);
}
._3mc5pjb4 {
  padding-left: var(--_11p3wr31);
}
._3mc5pjb8 {
  padding-left: var(--_11p3wr32);
}
._3mc5pjbc {
  padding-left: var(--_11p3wr33);
}
._3mc5pjbg {
  padding-left: var(--_11p3wr34);
}
._3mc5pjbk {
  padding-left: var(--_11p3wr35);
}
._3mc5pjbo {
  padding-left: var(--_11p3wr36);
}
._3mc5pjbs {
  padding-left: var(--_11p3wr37);
}
._3mc5pjbw {
  padding-left: var(--_11p3wr38);
}
._3mc5pjc0 {
  padding-left: 0;
}
._3mc5pjc4 {
  margin-top: var(--_11p3wr30);
}
._3mc5pjc8 {
  margin-top: var(--_11p3wr31);
}
._3mc5pjcc {
  margin-top: var(--_11p3wr32);
}
._3mc5pjcg {
  margin-top: var(--_11p3wr33);
}
._3mc5pjck {
  margin-top: var(--_11p3wr34);
}
._3mc5pjco {
  margin-top: var(--_11p3wr35);
}
._3mc5pjcs {
  margin-top: var(--_11p3wr36);
}
._3mc5pjcw {
  margin-top: var(--_11p3wr37);
}
._3mc5pjd0 {
  margin-top: var(--_11p3wr38);
}
._3mc5pjd4 {
  margin-top: 0;
}
._3mc5pjd8 {
  margin-bottom: var(--_11p3wr30);
}
._3mc5pjdc {
  margin-bottom: var(--_11p3wr31);
}
._3mc5pjdg {
  margin-bottom: var(--_11p3wr32);
}
._3mc5pjdk {
  margin-bottom: var(--_11p3wr33);
}
._3mc5pjdo {
  margin-bottom: var(--_11p3wr34);
}
._3mc5pjds {
  margin-bottom: var(--_11p3wr35);
}
._3mc5pjdw {
  margin-bottom: var(--_11p3wr36);
}
._3mc5pje0 {
  margin-bottom: var(--_11p3wr37);
}
._3mc5pje4 {
  margin-bottom: var(--_11p3wr38);
}
._3mc5pje8 {
  margin-bottom: 0;
}
._3mc5pjec {
  margin-right: var(--_11p3wr30);
}
._3mc5pjeg {
  margin-right: var(--_11p3wr31);
}
._3mc5pjek {
  margin-right: var(--_11p3wr32);
}
._3mc5pjeo {
  margin-right: var(--_11p3wr33);
}
._3mc5pjes {
  margin-right: var(--_11p3wr34);
}
._3mc5pjew {
  margin-right: var(--_11p3wr35);
}
._3mc5pjf0 {
  margin-right: var(--_11p3wr36);
}
._3mc5pjf4 {
  margin-right: var(--_11p3wr37);
}
._3mc5pjf8 {
  margin-right: var(--_11p3wr38);
}
._3mc5pjfc {
  margin-right: 0;
}
._3mc5pjfg {
  margin-left: var(--_11p3wr30);
}
._3mc5pjfk {
  margin-left: var(--_11p3wr31);
}
._3mc5pjfo {
  margin-left: var(--_11p3wr32);
}
._3mc5pjfs {
  margin-left: var(--_11p3wr33);
}
._3mc5pjfw {
  margin-left: var(--_11p3wr34);
}
._3mc5pjg0 {
  margin-left: var(--_11p3wr35);
}
._3mc5pjg4 {
  margin-left: var(--_11p3wr36);
}
._3mc5pjg8 {
  margin-left: var(--_11p3wr37);
}
._3mc5pjgc {
  margin-left: var(--_11p3wr38);
}
._3mc5pjgg {
  margin-left: 0;
}
._3mc5pjgk {
  align-items: flex-start;
}
._3mc5pjgo {
  align-items: center;
}
._3mc5pjgs {
  align-items: flex-end;
}
._3mc5pjgw {
  justify-content: flex-start;
}
._3mc5pjh0 {
  justify-content: center;
}
._3mc5pjh4 {
  justify-content: flex-end;
}
._3mc5pjh8 {
  justify-content: space-between;
}
._3mc5pjhc {
  flex-direction: row;
}
._3mc5pjhg {
  flex-direction: row-reverse;
}
._3mc5pjhk {
  flex-direction: column;
}
._3mc5pjho {
  flex-direction: column-reverse;
}
._3mc5pjhs {
  flex-wrap: wrap;
}
._3mc5pjhw {
  flex-wrap: nowrap;
}
._3mc5pji0 {
  flex-shrink: 0;
}
._3mc5pji4 {
  flex-grow: 0;
}
._3mc5pji8 {
  flex-grow: 1;
}
._3mc5pjic {
  text-align: left;
}
._3mc5pjig {
  text-align: center;
}
._3mc5pjik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._3mc5pj4x {
    display: none;
  }
  ._3mc5pj51 {
    display: block;
  }
  ._3mc5pj55 {
    display: inline;
  }
  ._3mc5pj59 {
    display: inline-block;
  }
  ._3mc5pj5d {
    display: flex;
  }
  ._3mc5pj5h {
    position: relative;
  }
  ._3mc5pj5l {
    position: absolute;
  }
  ._3mc5pj5p {
    position: fixed;
  }
  ._3mc5pj5t {
    position: sticky;
  }
  ._3mc5pj5x {
    border-radius: 0;
  }
  ._3mc5pj61 {
    border-radius: 9999px;
  }
  ._3mc5pj65 {
    border-radius: var(--_11p3wr3b);
  }
  ._3mc5pj69 {
    border-radius: var(--_11p3wr3c);
  }
  ._3mc5pj6d {
    border-radius: var(--_11p3wr3d);
  }
  ._3mc5pj6h {
    border-radius: var(--_11p3wr3e);
  }
  ._3mc5pj6l {
    gap: var(--_11p3wr30);
  }
  ._3mc5pj6p {
    gap: var(--_11p3wr31);
  }
  ._3mc5pj6t {
    gap: var(--_11p3wr32);
  }
  ._3mc5pj6x {
    gap: var(--_11p3wr33);
  }
  ._3mc5pj71 {
    gap: var(--_11p3wr34);
  }
  ._3mc5pj75 {
    gap: var(--_11p3wr35);
  }
  ._3mc5pj79 {
    gap: var(--_11p3wr36);
  }
  ._3mc5pj7d {
    gap: var(--_11p3wr37);
  }
  ._3mc5pj7h {
    gap: var(--_11p3wr38);
  }
  ._3mc5pj7l {
    gap: 0;
  }
  ._3mc5pj7p {
    padding-top: var(--_11p3wr30);
  }
  ._3mc5pj7t {
    padding-top: var(--_11p3wr31);
  }
  ._3mc5pj7x {
    padding-top: var(--_11p3wr32);
  }
  ._3mc5pj81 {
    padding-top: var(--_11p3wr33);
  }
  ._3mc5pj85 {
    padding-top: var(--_11p3wr34);
  }
  ._3mc5pj89 {
    padding-top: var(--_11p3wr35);
  }
  ._3mc5pj8d {
    padding-top: var(--_11p3wr36);
  }
  ._3mc5pj8h {
    padding-top: var(--_11p3wr37);
  }
  ._3mc5pj8l {
    padding-top: var(--_11p3wr38);
  }
  ._3mc5pj8p {
    padding-top: 0;
  }
  ._3mc5pj8t {
    padding-bottom: var(--_11p3wr30);
  }
  ._3mc5pj8x {
    padding-bottom: var(--_11p3wr31);
  }
  ._3mc5pj91 {
    padding-bottom: var(--_11p3wr32);
  }
  ._3mc5pj95 {
    padding-bottom: var(--_11p3wr33);
  }
  ._3mc5pj99 {
    padding-bottom: var(--_11p3wr34);
  }
  ._3mc5pj9d {
    padding-bottom: var(--_11p3wr35);
  }
  ._3mc5pj9h {
    padding-bottom: var(--_11p3wr36);
  }
  ._3mc5pj9l {
    padding-bottom: var(--_11p3wr37);
  }
  ._3mc5pj9p {
    padding-bottom: var(--_11p3wr38);
  }
  ._3mc5pj9t {
    padding-bottom: 0;
  }
  ._3mc5pj9x {
    padding-right: var(--_11p3wr30);
  }
  ._3mc5pja1 {
    padding-right: var(--_11p3wr31);
  }
  ._3mc5pja5 {
    padding-right: var(--_11p3wr32);
  }
  ._3mc5pja9 {
    padding-right: var(--_11p3wr33);
  }
  ._3mc5pjad {
    padding-right: var(--_11p3wr34);
  }
  ._3mc5pjah {
    padding-right: var(--_11p3wr35);
  }
  ._3mc5pjal {
    padding-right: var(--_11p3wr36);
  }
  ._3mc5pjap {
    padding-right: var(--_11p3wr37);
  }
  ._3mc5pjat {
    padding-right: var(--_11p3wr38);
  }
  ._3mc5pjax {
    padding-right: 0;
  }
  ._3mc5pjb1 {
    padding-left: var(--_11p3wr30);
  }
  ._3mc5pjb5 {
    padding-left: var(--_11p3wr31);
  }
  ._3mc5pjb9 {
    padding-left: var(--_11p3wr32);
  }
  ._3mc5pjbd {
    padding-left: var(--_11p3wr33);
  }
  ._3mc5pjbh {
    padding-left: var(--_11p3wr34);
  }
  ._3mc5pjbl {
    padding-left: var(--_11p3wr35);
  }
  ._3mc5pjbp {
    padding-left: var(--_11p3wr36);
  }
  ._3mc5pjbt {
    padding-left: var(--_11p3wr37);
  }
  ._3mc5pjbx {
    padding-left: var(--_11p3wr38);
  }
  ._3mc5pjc1 {
    padding-left: 0;
  }
  ._3mc5pjc5 {
    margin-top: var(--_11p3wr30);
  }
  ._3mc5pjc9 {
    margin-top: var(--_11p3wr31);
  }
  ._3mc5pjcd {
    margin-top: var(--_11p3wr32);
  }
  ._3mc5pjch {
    margin-top: var(--_11p3wr33);
  }
  ._3mc5pjcl {
    margin-top: var(--_11p3wr34);
  }
  ._3mc5pjcp {
    margin-top: var(--_11p3wr35);
  }
  ._3mc5pjct {
    margin-top: var(--_11p3wr36);
  }
  ._3mc5pjcx {
    margin-top: var(--_11p3wr37);
  }
  ._3mc5pjd1 {
    margin-top: var(--_11p3wr38);
  }
  ._3mc5pjd5 {
    margin-top: 0;
  }
  ._3mc5pjd9 {
    margin-bottom: var(--_11p3wr30);
  }
  ._3mc5pjdd {
    margin-bottom: var(--_11p3wr31);
  }
  ._3mc5pjdh {
    margin-bottom: var(--_11p3wr32);
  }
  ._3mc5pjdl {
    margin-bottom: var(--_11p3wr33);
  }
  ._3mc5pjdp {
    margin-bottom: var(--_11p3wr34);
  }
  ._3mc5pjdt {
    margin-bottom: var(--_11p3wr35);
  }
  ._3mc5pjdx {
    margin-bottom: var(--_11p3wr36);
  }
  ._3mc5pje1 {
    margin-bottom: var(--_11p3wr37);
  }
  ._3mc5pje5 {
    margin-bottom: var(--_11p3wr38);
  }
  ._3mc5pje9 {
    margin-bottom: 0;
  }
  ._3mc5pjed {
    margin-right: var(--_11p3wr30);
  }
  ._3mc5pjeh {
    margin-right: var(--_11p3wr31);
  }
  ._3mc5pjel {
    margin-right: var(--_11p3wr32);
  }
  ._3mc5pjep {
    margin-right: var(--_11p3wr33);
  }
  ._3mc5pjet {
    margin-right: var(--_11p3wr34);
  }
  ._3mc5pjex {
    margin-right: var(--_11p3wr35);
  }
  ._3mc5pjf1 {
    margin-right: var(--_11p3wr36);
  }
  ._3mc5pjf5 {
    margin-right: var(--_11p3wr37);
  }
  ._3mc5pjf9 {
    margin-right: var(--_11p3wr38);
  }
  ._3mc5pjfd {
    margin-right: 0;
  }
  ._3mc5pjfh {
    margin-left: var(--_11p3wr30);
  }
  ._3mc5pjfl {
    margin-left: var(--_11p3wr31);
  }
  ._3mc5pjfp {
    margin-left: var(--_11p3wr32);
  }
  ._3mc5pjft {
    margin-left: var(--_11p3wr33);
  }
  ._3mc5pjfx {
    margin-left: var(--_11p3wr34);
  }
  ._3mc5pjg1 {
    margin-left: var(--_11p3wr35);
  }
  ._3mc5pjg5 {
    margin-left: var(--_11p3wr36);
  }
  ._3mc5pjg9 {
    margin-left: var(--_11p3wr37);
  }
  ._3mc5pjgd {
    margin-left: var(--_11p3wr38);
  }
  ._3mc5pjgh {
    margin-left: 0;
  }
  ._3mc5pjgl {
    align-items: flex-start;
  }
  ._3mc5pjgp {
    align-items: center;
  }
  ._3mc5pjgt {
    align-items: flex-end;
  }
  ._3mc5pjgx {
    justify-content: flex-start;
  }
  ._3mc5pjh1 {
    justify-content: center;
  }
  ._3mc5pjh5 {
    justify-content: flex-end;
  }
  ._3mc5pjh9 {
    justify-content: space-between;
  }
  ._3mc5pjhd {
    flex-direction: row;
  }
  ._3mc5pjhh {
    flex-direction: row-reverse;
  }
  ._3mc5pjhl {
    flex-direction: column;
  }
  ._3mc5pjhp {
    flex-direction: column-reverse;
  }
  ._3mc5pjht {
    flex-wrap: wrap;
  }
  ._3mc5pjhx {
    flex-wrap: nowrap;
  }
  ._3mc5pji1 {
    flex-shrink: 0;
  }
  ._3mc5pji5 {
    flex-grow: 0;
  }
  ._3mc5pji9 {
    flex-grow: 1;
  }
  ._3mc5pjid {
    text-align: left;
  }
  ._3mc5pjih {
    text-align: center;
  }
  ._3mc5pjil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._3mc5pj4y {
    display: none;
  }
  ._3mc5pj52 {
    display: block;
  }
  ._3mc5pj56 {
    display: inline;
  }
  ._3mc5pj5a {
    display: inline-block;
  }
  ._3mc5pj5e {
    display: flex;
  }
  ._3mc5pj5i {
    position: relative;
  }
  ._3mc5pj5m {
    position: absolute;
  }
  ._3mc5pj5q {
    position: fixed;
  }
  ._3mc5pj5u {
    position: sticky;
  }
  ._3mc5pj5y {
    border-radius: 0;
  }
  ._3mc5pj62 {
    border-radius: 9999px;
  }
  ._3mc5pj66 {
    border-radius: var(--_11p3wr3b);
  }
  ._3mc5pj6a {
    border-radius: var(--_11p3wr3c);
  }
  ._3mc5pj6e {
    border-radius: var(--_11p3wr3d);
  }
  ._3mc5pj6i {
    border-radius: var(--_11p3wr3e);
  }
  ._3mc5pj6m {
    gap: var(--_11p3wr30);
  }
  ._3mc5pj6q {
    gap: var(--_11p3wr31);
  }
  ._3mc5pj6u {
    gap: var(--_11p3wr32);
  }
  ._3mc5pj6y {
    gap: var(--_11p3wr33);
  }
  ._3mc5pj72 {
    gap: var(--_11p3wr34);
  }
  ._3mc5pj76 {
    gap: var(--_11p3wr35);
  }
  ._3mc5pj7a {
    gap: var(--_11p3wr36);
  }
  ._3mc5pj7e {
    gap: var(--_11p3wr37);
  }
  ._3mc5pj7i {
    gap: var(--_11p3wr38);
  }
  ._3mc5pj7m {
    gap: 0;
  }
  ._3mc5pj7q {
    padding-top: var(--_11p3wr30);
  }
  ._3mc5pj7u {
    padding-top: var(--_11p3wr31);
  }
  ._3mc5pj7y {
    padding-top: var(--_11p3wr32);
  }
  ._3mc5pj82 {
    padding-top: var(--_11p3wr33);
  }
  ._3mc5pj86 {
    padding-top: var(--_11p3wr34);
  }
  ._3mc5pj8a {
    padding-top: var(--_11p3wr35);
  }
  ._3mc5pj8e {
    padding-top: var(--_11p3wr36);
  }
  ._3mc5pj8i {
    padding-top: var(--_11p3wr37);
  }
  ._3mc5pj8m {
    padding-top: var(--_11p3wr38);
  }
  ._3mc5pj8q {
    padding-top: 0;
  }
  ._3mc5pj8u {
    padding-bottom: var(--_11p3wr30);
  }
  ._3mc5pj8y {
    padding-bottom: var(--_11p3wr31);
  }
  ._3mc5pj92 {
    padding-bottom: var(--_11p3wr32);
  }
  ._3mc5pj96 {
    padding-bottom: var(--_11p3wr33);
  }
  ._3mc5pj9a {
    padding-bottom: var(--_11p3wr34);
  }
  ._3mc5pj9e {
    padding-bottom: var(--_11p3wr35);
  }
  ._3mc5pj9i {
    padding-bottom: var(--_11p3wr36);
  }
  ._3mc5pj9m {
    padding-bottom: var(--_11p3wr37);
  }
  ._3mc5pj9q {
    padding-bottom: var(--_11p3wr38);
  }
  ._3mc5pj9u {
    padding-bottom: 0;
  }
  ._3mc5pj9y {
    padding-right: var(--_11p3wr30);
  }
  ._3mc5pja2 {
    padding-right: var(--_11p3wr31);
  }
  ._3mc5pja6 {
    padding-right: var(--_11p3wr32);
  }
  ._3mc5pjaa {
    padding-right: var(--_11p3wr33);
  }
  ._3mc5pjae {
    padding-right: var(--_11p3wr34);
  }
  ._3mc5pjai {
    padding-right: var(--_11p3wr35);
  }
  ._3mc5pjam {
    padding-right: var(--_11p3wr36);
  }
  ._3mc5pjaq {
    padding-right: var(--_11p3wr37);
  }
  ._3mc5pjau {
    padding-right: var(--_11p3wr38);
  }
  ._3mc5pjay {
    padding-right: 0;
  }
  ._3mc5pjb2 {
    padding-left: var(--_11p3wr30);
  }
  ._3mc5pjb6 {
    padding-left: var(--_11p3wr31);
  }
  ._3mc5pjba {
    padding-left: var(--_11p3wr32);
  }
  ._3mc5pjbe {
    padding-left: var(--_11p3wr33);
  }
  ._3mc5pjbi {
    padding-left: var(--_11p3wr34);
  }
  ._3mc5pjbm {
    padding-left: var(--_11p3wr35);
  }
  ._3mc5pjbq {
    padding-left: var(--_11p3wr36);
  }
  ._3mc5pjbu {
    padding-left: var(--_11p3wr37);
  }
  ._3mc5pjby {
    padding-left: var(--_11p3wr38);
  }
  ._3mc5pjc2 {
    padding-left: 0;
  }
  ._3mc5pjc6 {
    margin-top: var(--_11p3wr30);
  }
  ._3mc5pjca {
    margin-top: var(--_11p3wr31);
  }
  ._3mc5pjce {
    margin-top: var(--_11p3wr32);
  }
  ._3mc5pjci {
    margin-top: var(--_11p3wr33);
  }
  ._3mc5pjcm {
    margin-top: var(--_11p3wr34);
  }
  ._3mc5pjcq {
    margin-top: var(--_11p3wr35);
  }
  ._3mc5pjcu {
    margin-top: var(--_11p3wr36);
  }
  ._3mc5pjcy {
    margin-top: var(--_11p3wr37);
  }
  ._3mc5pjd2 {
    margin-top: var(--_11p3wr38);
  }
  ._3mc5pjd6 {
    margin-top: 0;
  }
  ._3mc5pjda {
    margin-bottom: var(--_11p3wr30);
  }
  ._3mc5pjde {
    margin-bottom: var(--_11p3wr31);
  }
  ._3mc5pjdi {
    margin-bottom: var(--_11p3wr32);
  }
  ._3mc5pjdm {
    margin-bottom: var(--_11p3wr33);
  }
  ._3mc5pjdq {
    margin-bottom: var(--_11p3wr34);
  }
  ._3mc5pjdu {
    margin-bottom: var(--_11p3wr35);
  }
  ._3mc5pjdy {
    margin-bottom: var(--_11p3wr36);
  }
  ._3mc5pje2 {
    margin-bottom: var(--_11p3wr37);
  }
  ._3mc5pje6 {
    margin-bottom: var(--_11p3wr38);
  }
  ._3mc5pjea {
    margin-bottom: 0;
  }
  ._3mc5pjee {
    margin-right: var(--_11p3wr30);
  }
  ._3mc5pjei {
    margin-right: var(--_11p3wr31);
  }
  ._3mc5pjem {
    margin-right: var(--_11p3wr32);
  }
  ._3mc5pjeq {
    margin-right: var(--_11p3wr33);
  }
  ._3mc5pjeu {
    margin-right: var(--_11p3wr34);
  }
  ._3mc5pjey {
    margin-right: var(--_11p3wr35);
  }
  ._3mc5pjf2 {
    margin-right: var(--_11p3wr36);
  }
  ._3mc5pjf6 {
    margin-right: var(--_11p3wr37);
  }
  ._3mc5pjfa {
    margin-right: var(--_11p3wr38);
  }
  ._3mc5pjfe {
    margin-right: 0;
  }
  ._3mc5pjfi {
    margin-left: var(--_11p3wr30);
  }
  ._3mc5pjfm {
    margin-left: var(--_11p3wr31);
  }
  ._3mc5pjfq {
    margin-left: var(--_11p3wr32);
  }
  ._3mc5pjfu {
    margin-left: var(--_11p3wr33);
  }
  ._3mc5pjfy {
    margin-left: var(--_11p3wr34);
  }
  ._3mc5pjg2 {
    margin-left: var(--_11p3wr35);
  }
  ._3mc5pjg6 {
    margin-left: var(--_11p3wr36);
  }
  ._3mc5pjga {
    margin-left: var(--_11p3wr37);
  }
  ._3mc5pjge {
    margin-left: var(--_11p3wr38);
  }
  ._3mc5pjgi {
    margin-left: 0;
  }
  ._3mc5pjgm {
    align-items: flex-start;
  }
  ._3mc5pjgq {
    align-items: center;
  }
  ._3mc5pjgu {
    align-items: flex-end;
  }
  ._3mc5pjgy {
    justify-content: flex-start;
  }
  ._3mc5pjh2 {
    justify-content: center;
  }
  ._3mc5pjh6 {
    justify-content: flex-end;
  }
  ._3mc5pjha {
    justify-content: space-between;
  }
  ._3mc5pjhe {
    flex-direction: row;
  }
  ._3mc5pjhi {
    flex-direction: row-reverse;
  }
  ._3mc5pjhm {
    flex-direction: column;
  }
  ._3mc5pjhq {
    flex-direction: column-reverse;
  }
  ._3mc5pjhu {
    flex-wrap: wrap;
  }
  ._3mc5pjhy {
    flex-wrap: nowrap;
  }
  ._3mc5pji2 {
    flex-shrink: 0;
  }
  ._3mc5pji6 {
    flex-grow: 0;
  }
  ._3mc5pjia {
    flex-grow: 1;
  }
  ._3mc5pjie {
    text-align: left;
  }
  ._3mc5pjii {
    text-align: center;
  }
  ._3mc5pjim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._3mc5pj4z {
    display: none;
  }
  ._3mc5pj53 {
    display: block;
  }
  ._3mc5pj57 {
    display: inline;
  }
  ._3mc5pj5b {
    display: inline-block;
  }
  ._3mc5pj5f {
    display: flex;
  }
  ._3mc5pj5j {
    position: relative;
  }
  ._3mc5pj5n {
    position: absolute;
  }
  ._3mc5pj5r {
    position: fixed;
  }
  ._3mc5pj5v {
    position: sticky;
  }
  ._3mc5pj5z {
    border-radius: 0;
  }
  ._3mc5pj63 {
    border-radius: 9999px;
  }
  ._3mc5pj67 {
    border-radius: var(--_11p3wr3b);
  }
  ._3mc5pj6b {
    border-radius: var(--_11p3wr3c);
  }
  ._3mc5pj6f {
    border-radius: var(--_11p3wr3d);
  }
  ._3mc5pj6j {
    border-radius: var(--_11p3wr3e);
  }
  ._3mc5pj6n {
    gap: var(--_11p3wr30);
  }
  ._3mc5pj6r {
    gap: var(--_11p3wr31);
  }
  ._3mc5pj6v {
    gap: var(--_11p3wr32);
  }
  ._3mc5pj6z {
    gap: var(--_11p3wr33);
  }
  ._3mc5pj73 {
    gap: var(--_11p3wr34);
  }
  ._3mc5pj77 {
    gap: var(--_11p3wr35);
  }
  ._3mc5pj7b {
    gap: var(--_11p3wr36);
  }
  ._3mc5pj7f {
    gap: var(--_11p3wr37);
  }
  ._3mc5pj7j {
    gap: var(--_11p3wr38);
  }
  ._3mc5pj7n {
    gap: 0;
  }
  ._3mc5pj7r {
    padding-top: var(--_11p3wr30);
  }
  ._3mc5pj7v {
    padding-top: var(--_11p3wr31);
  }
  ._3mc5pj7z {
    padding-top: var(--_11p3wr32);
  }
  ._3mc5pj83 {
    padding-top: var(--_11p3wr33);
  }
  ._3mc5pj87 {
    padding-top: var(--_11p3wr34);
  }
  ._3mc5pj8b {
    padding-top: var(--_11p3wr35);
  }
  ._3mc5pj8f {
    padding-top: var(--_11p3wr36);
  }
  ._3mc5pj8j {
    padding-top: var(--_11p3wr37);
  }
  ._3mc5pj8n {
    padding-top: var(--_11p3wr38);
  }
  ._3mc5pj8r {
    padding-top: 0;
  }
  ._3mc5pj8v {
    padding-bottom: var(--_11p3wr30);
  }
  ._3mc5pj8z {
    padding-bottom: var(--_11p3wr31);
  }
  ._3mc5pj93 {
    padding-bottom: var(--_11p3wr32);
  }
  ._3mc5pj97 {
    padding-bottom: var(--_11p3wr33);
  }
  ._3mc5pj9b {
    padding-bottom: var(--_11p3wr34);
  }
  ._3mc5pj9f {
    padding-bottom: var(--_11p3wr35);
  }
  ._3mc5pj9j {
    padding-bottom: var(--_11p3wr36);
  }
  ._3mc5pj9n {
    padding-bottom: var(--_11p3wr37);
  }
  ._3mc5pj9r {
    padding-bottom: var(--_11p3wr38);
  }
  ._3mc5pj9v {
    padding-bottom: 0;
  }
  ._3mc5pj9z {
    padding-right: var(--_11p3wr30);
  }
  ._3mc5pja3 {
    padding-right: var(--_11p3wr31);
  }
  ._3mc5pja7 {
    padding-right: var(--_11p3wr32);
  }
  ._3mc5pjab {
    padding-right: var(--_11p3wr33);
  }
  ._3mc5pjaf {
    padding-right: var(--_11p3wr34);
  }
  ._3mc5pjaj {
    padding-right: var(--_11p3wr35);
  }
  ._3mc5pjan {
    padding-right: var(--_11p3wr36);
  }
  ._3mc5pjar {
    padding-right: var(--_11p3wr37);
  }
  ._3mc5pjav {
    padding-right: var(--_11p3wr38);
  }
  ._3mc5pjaz {
    padding-right: 0;
  }
  ._3mc5pjb3 {
    padding-left: var(--_11p3wr30);
  }
  ._3mc5pjb7 {
    padding-left: var(--_11p3wr31);
  }
  ._3mc5pjbb {
    padding-left: var(--_11p3wr32);
  }
  ._3mc5pjbf {
    padding-left: var(--_11p3wr33);
  }
  ._3mc5pjbj {
    padding-left: var(--_11p3wr34);
  }
  ._3mc5pjbn {
    padding-left: var(--_11p3wr35);
  }
  ._3mc5pjbr {
    padding-left: var(--_11p3wr36);
  }
  ._3mc5pjbv {
    padding-left: var(--_11p3wr37);
  }
  ._3mc5pjbz {
    padding-left: var(--_11p3wr38);
  }
  ._3mc5pjc3 {
    padding-left: 0;
  }
  ._3mc5pjc7 {
    margin-top: var(--_11p3wr30);
  }
  ._3mc5pjcb {
    margin-top: var(--_11p3wr31);
  }
  ._3mc5pjcf {
    margin-top: var(--_11p3wr32);
  }
  ._3mc5pjcj {
    margin-top: var(--_11p3wr33);
  }
  ._3mc5pjcn {
    margin-top: var(--_11p3wr34);
  }
  ._3mc5pjcr {
    margin-top: var(--_11p3wr35);
  }
  ._3mc5pjcv {
    margin-top: var(--_11p3wr36);
  }
  ._3mc5pjcz {
    margin-top: var(--_11p3wr37);
  }
  ._3mc5pjd3 {
    margin-top: var(--_11p3wr38);
  }
  ._3mc5pjd7 {
    margin-top: 0;
  }
  ._3mc5pjdb {
    margin-bottom: var(--_11p3wr30);
  }
  ._3mc5pjdf {
    margin-bottom: var(--_11p3wr31);
  }
  ._3mc5pjdj {
    margin-bottom: var(--_11p3wr32);
  }
  ._3mc5pjdn {
    margin-bottom: var(--_11p3wr33);
  }
  ._3mc5pjdr {
    margin-bottom: var(--_11p3wr34);
  }
  ._3mc5pjdv {
    margin-bottom: var(--_11p3wr35);
  }
  ._3mc5pjdz {
    margin-bottom: var(--_11p3wr36);
  }
  ._3mc5pje3 {
    margin-bottom: var(--_11p3wr37);
  }
  ._3mc5pje7 {
    margin-bottom: var(--_11p3wr38);
  }
  ._3mc5pjeb {
    margin-bottom: 0;
  }
  ._3mc5pjef {
    margin-right: var(--_11p3wr30);
  }
  ._3mc5pjej {
    margin-right: var(--_11p3wr31);
  }
  ._3mc5pjen {
    margin-right: var(--_11p3wr32);
  }
  ._3mc5pjer {
    margin-right: var(--_11p3wr33);
  }
  ._3mc5pjev {
    margin-right: var(--_11p3wr34);
  }
  ._3mc5pjez {
    margin-right: var(--_11p3wr35);
  }
  ._3mc5pjf3 {
    margin-right: var(--_11p3wr36);
  }
  ._3mc5pjf7 {
    margin-right: var(--_11p3wr37);
  }
  ._3mc5pjfb {
    margin-right: var(--_11p3wr38);
  }
  ._3mc5pjff {
    margin-right: 0;
  }
  ._3mc5pjfj {
    margin-left: var(--_11p3wr30);
  }
  ._3mc5pjfn {
    margin-left: var(--_11p3wr31);
  }
  ._3mc5pjfr {
    margin-left: var(--_11p3wr32);
  }
  ._3mc5pjfv {
    margin-left: var(--_11p3wr33);
  }
  ._3mc5pjfz {
    margin-left: var(--_11p3wr34);
  }
  ._3mc5pjg3 {
    margin-left: var(--_11p3wr35);
  }
  ._3mc5pjg7 {
    margin-left: var(--_11p3wr36);
  }
  ._3mc5pjgb {
    margin-left: var(--_11p3wr37);
  }
  ._3mc5pjgf {
    margin-left: var(--_11p3wr38);
  }
  ._3mc5pjgj {
    margin-left: 0;
  }
  ._3mc5pjgn {
    align-items: flex-start;
  }
  ._3mc5pjgr {
    align-items: center;
  }
  ._3mc5pjgv {
    align-items: flex-end;
  }
  ._3mc5pjgz {
    justify-content: flex-start;
  }
  ._3mc5pjh3 {
    justify-content: center;
  }
  ._3mc5pjh7 {
    justify-content: flex-end;
  }
  ._3mc5pjhb {
    justify-content: space-between;
  }
  ._3mc5pjhf {
    flex-direction: row;
  }
  ._3mc5pjhj {
    flex-direction: row-reverse;
  }
  ._3mc5pjhn {
    flex-direction: column;
  }
  ._3mc5pjhr {
    flex-direction: column-reverse;
  }
  ._3mc5pjhv {
    flex-wrap: wrap;
  }
  ._3mc5pjhz {
    flex-wrap: nowrap;
  }
  ._3mc5pji3 {
    flex-shrink: 0;
  }
  ._3mc5pji7 {
    flex-grow: 0;
  }
  ._3mc5pjib {
    flex-grow: 1;
  }
  ._3mc5pjif {
    text-align: left;
  }
  ._3mc5pjij {
    text-align: center;
  }
  ._3mc5pjin {
    text-align: right;
  }
}
.ftts590 {
  --_11p3wr30: 24px;
  --_11p3wr31: 8px;
  --_11p3wr32: 12px;
  --_11p3wr33: 16px;
  --_11p3wr34: 24px;
  --_11p3wr35: 32px;
  --_11p3wr36: 48px;
  --_11p3wr37: 64px;
  --_11p3wr38: 96px;
  --_11p3wr39: 48px;
  --_11p3wr3a: 4px;
  --_11p3wr3b: 4px;
  --_11p3wr3c: 8px;
  --_11p3wr3d: 16px;
  --_11p3wr3e: 24px;
  --_11p3wr3f: #e60278;
  --_11p3wr3g: #f8b1dc;
  --_11p3wr3h: #fdc221;
  --_11p3wr3i: #fee384;
  --_11p3wr3j: #b91e1e;
  --_11p3wr3k: #fb999a;
  --_11p3wr3l: #838fa5;
  --_11p3wr3m: rgba(153, 191, 247, 0.7);
  --_11p3wr3n: #1e47a9;
  --_11p3wr3o: #99bff7;
  --_11p3wr3p: #1d559d;
  --_11p3wr3q: #98c9f1;
  --_11p3wr3r: #2e3849;
  --_11p3wr3t: #eaecf1;
  --_11p3wr3s: #fff;
  --_11p3wr3u: #12784f;
  --_11p3wr3v: #8bdec5;
  --_11p3wr3w: #7f35a9;
  --_11p3wr3x: #e1b2f5;
  --_11p3wr3y: 2px;
  --_11p3wr3z: 4px;
  --_11p3wr310: 6px;
  --_11p3wr311: 400px;
  --_11p3wr312: 660px;
  --_11p3wr313: 940px;
  --_11p3wr314: 1280px;
  --_11p3wr315: #e60278;
  --_11p3wr316: #f8b1dc;
  --_11p3wr317: #723d02;
  --_11p3wr318: #fee384;
  --_11p3wr319: #b91e1e;
  --_11p3wr31a: #fb999a;
  --_11p3wr31b: #1e47a9;
  --_11p3wr31c: #99bff7;
  --_11p3wr31d: #1d559d;
  --_11p3wr31e: #98c9f1;
  --_11p3wr31f: #2e3849;
  --_11p3wr31h: #fff;
  --_11p3wr31g: #2e3849;
  --_11p3wr31i: #5b2084;
  --_11p3wr31j: #f0d6fa;
  --_11p3wr31k: #2e3849;
  --_11p3wr31l: #fff;
  --_11p3wr31m: #12784f;
  --_11p3wr31n: #8bdec5;
  --_11p3wr31o: #7f35a9;
  --_11p3wr31p: #e1b2f5;
  --_11p3wr31q: #e60278;
  --_11p3wr31r: #5a6881;
  --_11p3wr31s: hsla(0, 0%, 100%, 0.65);
  --_11p3wr31t: #fff;
  --_11p3wr31u: #1c2330;
  --_11p3wr31v: #051a49;
  --_11p3wr31w: #e60278;
  --_11p3wr31x: #cd026b;
  --_11p3wr31y: #fd0585;
  --_11p3wr31z: #feeffa;
  --_11p3wr320: #fdd7f3;
  --_11p3wr321: #fde3f6;
  --_11p3wr322: #fdc221;
  --_11p3wr323: #fef8de;
  --_11p3wr324: #b91e1e;
  --_11p3wr325: #a31a1a;
  --_11p3wr326: #db1616;
  --_11p3wr327: #ffe3e2;
  --_11p3wr328: #fef3f3;
  --_11p3wr329: #fcdbdb;
  --_11p3wr32a: #fde7e7;
  --_11p3wr32b: #1e47a9;
  --_11p3wr32c: #1a3e93;
  --_11p3wr32d: #2455c9;
  --_11p3wr32e: #f0f7fe;
  --_11p3wr32f: #d8eafc;
  --_11p3wr32g: #e4f1fd;
  --_11p3wr32h: #1d559d;
  --_11p3wr32i: #e3f2fb;
  --_11p3wr32j: #2e3849;
  --_11p3wr32k: #242c39;
  --_11p3wr32l: #384459;
  --_11p3wr32m: #f3f5f7;
  --_11p3wr32n: #f3f5f7;
  --_11p3wr32o: #e4e8ed;
  --_11p3wr32p: #ebeff2;
  --_11p3wr32q: #12784f;
  --_11p3wr32r: #e2f7f1;
  --_11p3wr32s: #7f35a9;
  --_11p3wr32t: #f9ebfd;
  --_11p3wr32u: #fff;
  --_11p3wr32v: #1c2330;
  --_11p3wr32w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_11p3wr32x: 783;
  --_11p3wr32y: 1057;
  --_11p3wr32z: -274;
  --_11p3wr330: 0;
  --_11p3wr331: 1000;
  --_11p3wr33w: 18px;
  --_11p3wr33x: 27.094px;
  --_11p3wr33y: 14.094px;
  --_11p3wr33z: -0.3611em;
  --_11p3wr340: -0.3611em;
  --_11p3wr341: 18px;
  --_11p3wr342: 27.094px;
  --_11p3wr343: 14.094px;
  --_11p3wr344: -0.3611em;
  --_11p3wr345: -0.3611em;
  --_11p3wr33m: 16px;
  --_11p3wr33n: 24.528px;
  --_11p3wr33o: 12.528px;
  --_11p3wr33p: -0.375em;
  --_11p3wr33q: -0.375em;
  --_11p3wr33r: 16px;
  --_11p3wr33s: 24.528px;
  --_11p3wr33t: 12.528px;
  --_11p3wr33u: -0.375em;
  --_11p3wr33v: -0.375em;
  --_11p3wr33c: 14px;
  --_11p3wr33d: 20.962px;
  --_11p3wr33e: 10.962px;
  --_11p3wr33f: -0.3571em;
  --_11p3wr33g: -0.3571em;
  --_11p3wr33h: 14px;
  --_11p3wr33i: 20.962px;
  --_11p3wr33j: 10.962px;
  --_11p3wr33k: -0.3571em;
  --_11p3wr33l: -0.3571em;
  --_11p3wr332: 12px;
  --_11p3wr333: 18.396px;
  --_11p3wr334: 9.396px;
  --_11p3wr335: -0.375em;
  --_11p3wr336: -0.375em;
  --_11p3wr337: 12px;
  --_11p3wr338: 18.396px;
  --_11p3wr339: 9.396px;
  --_11p3wr33a: -0.375em;
  --_11p3wr33b: -0.375em;
  --_11p3wr346: 400;
  --_11p3wr347: 600;
  --_11p3wr348: 700;
  --_11p3wr349: 28px;
  --_11p3wr34a: 32.924px;
  --_11p3wr34b: 21.924px;
  --_11p3wr34c: -0.1964em;
  --_11p3wr34d: -0.1964em;
  --_11p3wr34e: 36px;
  --_11p3wr34f: 42.188px;
  --_11p3wr34g: 28.188px;
  --_11p3wr34h: -0.1944em;
  --_11p3wr34i: -0.1944em;
  --_11p3wr34j: 24px;
  --_11p3wr34k: 29.792px;
  --_11p3wr34l: 18.792px;
  --_11p3wr34m: -0.2292em;
  --_11p3wr34n: -0.2292em;
  --_11p3wr34o: 30px;
  --_11p3wr34p: 36.49px;
  --_11p3wr34q: 23.49px;
  --_11p3wr34r: -0.2167em;
  --_11p3wr34s: -0.2167em;
  --_11p3wr34t: 22px;
  --_11p3wr34u: 27.226px;
  --_11p3wr34v: 17.226px;
  --_11p3wr34w: -0.2273em;
  --_11p3wr34x: -0.2273em;
  --_11p3wr34y: 24px;
  --_11p3wr34z: 29.792px;
  --_11p3wr350: 18.792px;
  --_11p3wr351: -0.2292em;
  --_11p3wr352: -0.2292em;
  --_11p3wr353: 20px;
  --_11p3wr354: 24.66px;
  --_11p3wr355: 15.66px;
  --_11p3wr356: -0.225em;
  --_11p3wr357: -0.225em;
  --_11p3wr358: 20px;
  --_11p3wr359: 24.66px;
  --_11p3wr35a: 15.66px;
  --_11p3wr35b: -0.225em;
  --_11p3wr35c: -0.225em;
  --_11p3wr35d: 400;
  --_11p3wr35e: 600;
  --_11p3wr35f: underline;
  --_11p3wr35g: 24px;
  --_11p3wr35h: 20px;
  --_11p3wr35i: transform 0.125s ease, opacity 0.125s ease;
  --_11p3wr35j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_11p3wr35k: scale(0.95);
  --_11p3wr35l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_11p3wr35m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_11p3wr35n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1xascs94 {
  font-size: var(--_1xascs90);
  line-height: var(--_1xascs91);
}
._1xascs94:before {
  content: "";
  display: table;
  margin-bottom: var(--_1xascs92);
}
._1xascs94:after {
  content: "";
  display: table;
  margin-top: var(--_1xascs93);
}
._19iwf180 {
  font-family: var(--_11p3wr32w);
}
._19iwf181 {
  font-weight: var(--_11p3wr346);
}
._19iwf182 {
  font-weight: var(--_11p3wr347);
}
._19iwf183 {
  font-weight: var(--_11p3wr348);
}
._19iwf184 {
  --_1xascs90: var(--_11p3wr332);
  --_1xascs91: var(--_11p3wr333);
  --_1xascs92: var(--_11p3wr335);
  --_1xascs93: var(--_11p3wr336);
}
._19iwf186 {
  --_1xascs90: var(--_11p3wr33c);
  --_1xascs91: var(--_11p3wr33d);
  --_1xascs92: var(--_11p3wr33f);
  --_1xascs93: var(--_11p3wr33g);
}
._19iwf188 {
  --_1xascs90: var(--_11p3wr33m);
  --_1xascs91: var(--_11p3wr33n);
  --_1xascs92: var(--_11p3wr33p);
  --_1xascs93: var(--_11p3wr33q);
}
._19iwf18a {
  --_1xascs90: var(--_11p3wr33w);
  --_1xascs91: var(--_11p3wr33x);
  --_1xascs92: var(--_11p3wr33z);
  --_1xascs93: var(--_11p3wr340);
}
._19iwf18c {
  font-size: var(--_11p3wr332);
  line-height: var(--_11p3wr333);
}
._19iwf18d {
  font-size: var(--_11p3wr33c);
  line-height: var(--_11p3wr33d);
}
._19iwf18e {
  font-size: var(--_11p3wr33m);
  line-height: var(--_11p3wr33n);
}
._19iwf18f {
  font-size: var(--_11p3wr33w);
  line-height: var(--_11p3wr33x);
}
._19iwf18g {
  font-weight: var(--_11p3wr35d);
}
._19iwf18h {
  font-weight: var(--_11p3wr35e);
}
._19iwf18i {
  --_1xascs90: var(--_11p3wr349);
  --_1xascs91: var(--_11p3wr34a);
  --_1xascs92: var(--_11p3wr34c);
  --_1xascs93: var(--_11p3wr34d);
}
._19iwf18k {
  --_1xascs90: var(--_11p3wr34j);
  --_1xascs91: var(--_11p3wr34k);
  --_1xascs92: var(--_11p3wr34m);
  --_1xascs93: var(--_11p3wr34n);
}
._19iwf18m {
  --_1xascs90: var(--_11p3wr34t);
  --_1xascs91: var(--_11p3wr34u);
  --_1xascs92: var(--_11p3wr34w);
  --_1xascs93: var(--_11p3wr34x);
}
._19iwf18o {
  --_1xascs90: var(--_11p3wr353);
  --_1xascs91: var(--_11p3wr354);
  --_1xascs92: var(--_11p3wr356);
  --_1xascs93: var(--_11p3wr357);
}
html:not(._3mc5pj11) ._19iwf1810 {
  --_19iwf18q: var(--_11p3wr319);
  --_19iwf18r: var(--_11p3wr317);
  --_19iwf18s: var(--_11p3wr31d);
  --_19iwf18t: var(--_11p3wr31o);
  --_19iwf18u: var(--_11p3wr31m);
  --_19iwf18v: var(--_11p3wr315);
  --_19iwf18w: var(--_11p3wr31b);
  --_19iwf18x: var(--_11p3wr31k);
  --_19iwf18y: var(--_11p3wr31r);
  --_19iwf18z: var(--_11p3wr31f);
}
html:not(._3mc5pj11) ._19iwf1811 {
  --_19iwf18q: var(--_11p3wr31a);
  --_19iwf18r: var(--_11p3wr318);
  --_19iwf18s: var(--_11p3wr31e);
  --_19iwf18t: var(--_11p3wr31p);
  --_19iwf18u: var(--_11p3wr31n);
  --_19iwf18v: var(--_11p3wr316);
  --_19iwf18w: var(--_11p3wr31c);
  --_19iwf18x: var(--_11p3wr31l);
  --_19iwf18y: var(--_11p3wr31s);
  --_19iwf18z: var(--_11p3wr31h);
}
html._3mc5pj11 ._19iwf1812 {
  --_19iwf18q: var(--_11p3wr319);
  --_19iwf18r: var(--_11p3wr317);
  --_19iwf18s: var(--_11p3wr31d);
  --_19iwf18t: var(--_11p3wr31o);
  --_19iwf18u: var(--_11p3wr31m);
  --_19iwf18v: var(--_11p3wr315);
  --_19iwf18w: var(--_11p3wr31b);
  --_19iwf18x: var(--_11p3wr31k);
  --_19iwf18y: var(--_11p3wr31r);
  --_19iwf18z: var(--_11p3wr31f);
}
html._3mc5pj11 ._19iwf1813 {
  --_19iwf18q: var(--_11p3wr31a);
  --_19iwf18r: var(--_11p3wr318);
  --_19iwf18s: var(--_11p3wr31e);
  --_19iwf18t: var(--_11p3wr31p);
  --_19iwf18u: var(--_11p3wr31n);
  --_19iwf18v: var(--_11p3wr316);
  --_19iwf18w: var(--_11p3wr31c);
  --_19iwf18x: var(--_11p3wr31l);
  --_19iwf18y: var(--_11p3wr31s);
  --_19iwf18z: var(--_11p3wr31h);
}
html:not(._3mc5pj11) ._19iwf1814,
html:not(._3mc5pj11) ._19iwf1815,
html:not(._3mc5pj11) ._19iwf1816,
html:not(._3mc5pj11) ._19iwf1817 {
  --_19iwf18x: var(--_19iwf18q);
}
html:not(._3mc5pj11) ._19iwf1818,
html:not(._3mc5pj11) ._19iwf1819 {
  --_19iwf18x: var(--_19iwf18r);
}
html:not(._3mc5pj11) ._19iwf181a {
  --_19iwf18x: var(--_19iwf18u);
}
html:not(._3mc5pj11) ._19iwf181b {
  --_19iwf18x: var(--_19iwf18s);
}
html:not(._3mc5pj11) ._19iwf181c {
  --_19iwf18x: var(--_19iwf18t);
}
html._3mc5pj11 ._19iwf181d,
html._3mc5pj11 ._19iwf181e,
html._3mc5pj11 ._19iwf181f,
html._3mc5pj11 ._19iwf181g {
  --_19iwf18x: var(--_19iwf18q);
}
html._3mc5pj11 ._19iwf181h,
html._3mc5pj11 ._19iwf181i {
  --_19iwf18x: var(--_19iwf18r);
}
html._3mc5pj11 ._19iwf181j {
  --_19iwf18x: var(--_19iwf18u);
}
html._3mc5pj11 ._19iwf181k {
  --_19iwf18x: var(--_19iwf18s);
}
html._3mc5pj11 ._19iwf181l {
  --_19iwf18x: var(--_19iwf18t);
}
._19iwf181m {
  color: var(--_19iwf18q);
}
._19iwf181n {
  color: var(--_19iwf18r);
}
._19iwf181o {
  color: var(--_19iwf18s);
}
._19iwf181p {
  color: var(--_19iwf18t);
}
._19iwf181q {
  color: var(--_19iwf18u);
}
._19iwf181r {
  color: var(--_19iwf18v);
}
._19iwf181s {
  color: var(--_19iwf18w);
}
._19iwf181t {
  color: var(--_19iwf18x);
}
._19iwf181u {
  color: var(--_19iwf18y);
}
._19iwf181v {
  color: var(--_19iwf18z);
}
._19iwf181w {
  padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr333)) / 2);
  padding-top: calc((var(--_11p3wr39) - var(--_11p3wr333)) / 2);
}
._19iwf181x {
  padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr33d)) / 2);
  padding-top: calc((var(--_11p3wr39) - var(--_11p3wr33d)) / 2);
}
._19iwf181y {
  padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr33n)) / 2);
  padding-top: calc((var(--_11p3wr39) - var(--_11p3wr33n)) / 2);
}
._19iwf181z {
  padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr33x)) / 2);
  padding-top: calc((var(--_11p3wr39) - var(--_11p3wr33x)) / 2);
}
@media screen and (min-width: 740px) {
  ._19iwf184 {
    --_1xascs90: var(--_11p3wr337);
    --_1xascs91: var(--_11p3wr338);
    --_1xascs92: var(--_11p3wr33a);
    --_1xascs93: var(--_11p3wr33b);
  }
  ._19iwf186 {
    --_1xascs90: var(--_11p3wr33h);
    --_1xascs91: var(--_11p3wr33i);
    --_1xascs92: var(--_11p3wr33k);
    --_1xascs93: var(--_11p3wr33l);
  }
  ._19iwf188 {
    --_1xascs90: var(--_11p3wr33r);
    --_1xascs91: var(--_11p3wr33s);
    --_1xascs92: var(--_11p3wr33u);
    --_1xascs93: var(--_11p3wr33v);
  }
  ._19iwf18a {
    --_1xascs90: var(--_11p3wr341);
    --_1xascs91: var(--_11p3wr342);
    --_1xascs92: var(--_11p3wr344);
    --_1xascs93: var(--_11p3wr345);
  }
  ._19iwf18c {
    font-size: var(--_11p3wr337);
    line-height: var(--_11p3wr338);
  }
  ._19iwf18d {
    font-size: var(--_11p3wr33h);
    line-height: var(--_11p3wr33i);
  }
  ._19iwf18e {
    font-size: var(--_11p3wr33r);
    line-height: var(--_11p3wr33s);
  }
  ._19iwf18f {
    font-size: var(--_11p3wr341);
    line-height: var(--_11p3wr342);
  }
  ._19iwf18i {
    --_1xascs90: var(--_11p3wr34e);
    --_1xascs91: var(--_11p3wr34f);
    --_1xascs92: var(--_11p3wr34h);
    --_1xascs93: var(--_11p3wr34i);
  }
  ._19iwf18k {
    --_1xascs90: var(--_11p3wr34o);
    --_1xascs91: var(--_11p3wr34p);
    --_1xascs92: var(--_11p3wr34r);
    --_1xascs93: var(--_11p3wr34s);
  }
  ._19iwf18m {
    --_1xascs90: var(--_11p3wr34y);
    --_1xascs91: var(--_11p3wr34z);
    --_1xascs92: var(--_11p3wr351);
    --_1xascs93: var(--_11p3wr352);
  }
  ._19iwf18o {
    --_1xascs90: var(--_11p3wr358);
    --_1xascs91: var(--_11p3wr359);
    --_1xascs92: var(--_11p3wr35b);
    --_1xascs93: var(--_11p3wr35c);
  }
  ._19iwf181w {
    padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr338)) / 2);
    padding-top: calc((var(--_11p3wr39) - var(--_11p3wr338)) / 2);
  }
  ._19iwf181x {
    padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr33i)) / 2);
    padding-top: calc((var(--_11p3wr39) - var(--_11p3wr33i)) / 2);
  }
  ._19iwf181y {
    padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr33s)) / 2);
    padding-top: calc((var(--_11p3wr39) - var(--_11p3wr33s)) / 2);
  }
  ._19iwf181z {
    padding-bottom: calc((var(--_11p3wr39) - var(--_11p3wr342)) / 2);
    padding-top: calc((var(--_11p3wr39) - var(--_11p3wr342)) / 2);
  }
}
._1efnqda6 {
  background: var(--_1efnqda0);
}
._1efnqda7 {
  background: var(--_1efnqda1);
}
._1efnqda8 {
  background: var(--_1efnqda2);
}
._1efnqda9 {
  background: var(--_1efnqda3);
}
._1efnqdaa {
  background: var(--_1efnqda4);
}
._1efnqdab {
  background: var(--_1efnqda5);
}
html:not(._3mc5pj11) ._1efnqdac {
  --_1efnqda0: var(--_11p3wr3w);
  --_1efnqda1: var(--_11p3wr3p);
  --_1efnqda2: var(--_11p3wr3u);
  --_1efnqda3: var(--_11p3wr3h);
  --_1efnqda4: var(--_11p3wr3j);
  --_1efnqda5: var(--_11p3wr3n);
}
html:not(._3mc5pj11) ._1efnqdad {
  --_1efnqda0: var(--_11p3wr3x);
  --_1efnqda1: var(--_11p3wr3q);
  --_1efnqda2: var(--_11p3wr3v);
  --_1efnqda3: var(--_11p3wr3i);
  --_1efnqda4: var(--_11p3wr3k);
  --_1efnqda5: var(--_11p3wr3o);
}
html._3mc5pj11 ._1efnqdae {
  --_1efnqda0: var(--_11p3wr3w);
  --_1efnqda1: var(--_11p3wr3p);
  --_1efnqda2: var(--_11p3wr3u);
  --_1efnqda3: var(--_11p3wr3h);
  --_1efnqda4: var(--_11p3wr3j);
  --_1efnqda5: var(--_11p3wr3n);
}
html._3mc5pj11 ._1efnqdaf {
  --_1efnqda0: var(--_11p3wr3x);
  --_1efnqda1: var(--_11p3wr3q);
  --_1efnqda2: var(--_11p3wr3v);
  --_1efnqda3: var(--_11p3wr3i);
  --_1efnqda4: var(--_11p3wr3k);
  --_1efnqda5: var(--_11p3wr3o);
}
._1efnqdag {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1efnqdah {
  width: var(--_11p3wr3e);
}
._1efnqdai {
  width: var(--_11p3wr3a);
}
._19fkonc0 {
  margin-bottom: -0.1em;
}
._19fkonc2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._19fkonc0 ._19fkonc2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._19fkonc4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--_19fkonc3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__3mc5pj11,html.sprinkles_darkMode__3mc5pj11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__ftts590 typography_lightModeTone_light__19iwf1810 typography_darkModeTone_dark__19iwf1813">
+        <div class="reset_base__1dzpovz0 sprinkles_paddingBottom_gutter_mobile__3mc5pj8s sprinkles_paddingTop_gutter_mobile__3mc5pj7o sprinkles_paddingLeft_gutter_mobile__3mc5pjb0 sprinkles_paddingRight_gutter_mobile__3mc5pj9w sprinkles_position_relative_mobile__3mc5pj5g sprinkles_borderRadius_large_mobile__3mc5pj6c sprinkles_textAlign_left_mobile__3mc5pjic sprinkles_boxShadow_borderNeutralLight_lightMode__3mc5pj4k sprinkles_boxShadow_borderNeutral_darkMode__3mc5pj4d typography_lightModeTone_light__19iwf1810 typography_darkModeTone_dark__19iwf1813 sprinkles_background_surface_lightMode__3mc5pj34 sprinkles_background_surfaceDark_darkMode__3mc5pj37">
+          <span class="reset_base__1dzpovz0 sprinkles_display_block_mobile__3mc5pj50 typography_fontFamily__19iwf180 typography_fontWeight_regular__19iwf181 typography_tone_neutral__19iwf181t typography_textSize_large__19iwf18a capsize_capsizeStyle__1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
